# ethrex-replay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  diff  zisk_bench.sh
.github/: CODEOWNERS  issue_template.md
.github/actions/free-disk/: action.yml
.github/actions/install-openvm/: action.yml
.github/actions/install-pico/: action.yml
.github/actions/install-risc0/: action.yml
.github/actions/install-sp1/: action.yml
.github/actions/install-zisk/: action.yml
.github/actions/setup-rust/: action.yml
.github/scripts/: set-pr-labels.js
.github/workflows/: pr-elixir.yaml  pr-front.yaml  pr-lint-pr-title.yaml  pr-main-lint.yaml  pr-main-test.yaml  pr-main.yaml  tag-release.yaml  test.yaml  test2.yaml  workflow-call.yaml
caches/: cache_hoodi_1281069.json
docs/: contributing-ethrex.md  faq.md  profiling.md
ethrex_replay_web/: .gitignore  Makefile  README.md  mix.exs
ethrex_replay_web/assets/css/: app.css
ethrex_replay_web/assets/js/: app.js
ethrex_replay_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ethrex_replay_web/lib/: ethrex_replay_web.ex  ethrex_replay_web_web.ex
ethrex_replay_web/lib/ethrex_replay_web/: application.ex  job.ex  jobs.ex  repo.ex
ethrex_replay_web/lib/ethrex_replay_web/jobs/: job_queue.ex  job_server.ex  job_supervisor.ex
ethrex_replay_web/lib/ethrex_replay_web/runner/: command_builder.ex
ethrex_replay_web/lib/ethrex_replay_web/system/: hardware_info.ex
ethrex_replay_web/lib/ethrex_replay_web_web/: endpoint.ex  router.ex  telemetry.ex
ethrex_replay_web/lib/ethrex_replay_web_web/components/: core_components.ex  layouts.ex
ethrex_replay_web/lib/ethrex_replay_web_web/components/layouts/: root.html.heex
ethrex_replay_web/lib/ethrex_replay_web_web/controllers/: error_html.ex  page_controller.ex  page_html.ex
ethrex_replay_web/lib/ethrex_replay_web_web/live/: dashboard_live.ex  history_live.ex  job_live.ex  system_live.ex
ethrex_replay_web/priv/repo/: seeds.exs
ethrex_replay_web/priv/repo/migrations/: 20260113024327_create_jobs.exs  20260114141327_add_ethrex_branch_to_jobs.exs
ethrex_replay_web/test/: test_helper.exs
ethrex_replay_web/test/ethrex_replay_web_web/controllers/: error_html_test.exs  page_controller_test.exs
ethrex_replay_web/test/support/: conn_case.ex  data_case.ex
fixtures/snapsync/v1/tiny/: manifest.json
fixtures/snapsync/v1/tiny/account_state_snapshots/: account_state_chunk.rlp.0
fixtures/snapsync/v1/tiny/account_storages_snapshots/: account_storages_chunk.rlp.0
src/: cache.rs  cli.rs  fetcher.rs  helpers.rs  lib.rs  plot_composition.rs  profiling.rs  report.rs  run.rs  snapsync.rs  snapsync_compare.rs  snapsync_report.rs  snapsync_verify.rs  tx_builder.rs
src/rpc/: db.rs  mod.rs
src/snapsync/: compare.rs  fixtures.rs  mod.rs  profile.rs  verify.rs
