[package]
name = "ethrex-replay"
edition = "2024"
authors = ["LambdaClass"]
version = "7.0.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = 2

[dependencies]
ethrex-config = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-config", branch = "feat/snap-profile" }
ethrex-storage = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-storage", branch = "feat/snap-profile" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-common", branch = "feat/snap-profile" }
ethrex-vm = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-vm", branch = "feat/snap-profile" }
ethrex-levm = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-levm", branch = "feat/snap-profile" }
ethrex-rpc = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-rpc", branch = "feat/snap-profile" }
ethrex-p2p = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-p2p", branch = "feat/snap-profile" }
ethrex-trie = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-trie", branch = "feat/snap-profile" }
ethrex-rlp = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-rlp", branch = "feat/snap-profile" }
ethrex-blockchain = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-blockchain", branch = "feat/snap-profile" }
ethrex-l2 = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-l2", branch = "feat/snap-profile", optional = true }
ethrex-l2-common = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-l2-common", branch = "feat/snap-profile" }
ethrex-storage-rollup = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-storage-rollup", branch = "feat/snap-profile", optional = true }
ethrex-sdk = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-sdk", branch = "feat/snap-profile" }
ethrex-l2-rpc = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-l2-rpc", branch = "feat/snap-profile" }
ethrex-prover = { git = "https://github.com/lambdaclass/ethrex", package = "ethrex-prover", branch = "feat/snap-profile", default-features = false }
guest_program = { git = "https://github.com/lambdaclass/ethrex", package = "guest_program", branch = "feat/snap-profile", default-features = false }

serde = { version = "1.0.203", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.117"
serde_with = "3.11.0"
reqwest = { version = "0.12.7", features = ["socks", "json"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing = { version = "0.1", features = ["log"] }
eyre = "0.6.12"
tokio = { version = "1.41.1", default-features = false }
clap = { version = "4.3", features = ["derive", "env"] }
charming = { version = "0.4.0", features = ["ssr"] }
lazy_static = "1.5.0"
bytes = { version = "1.6.0", features = ["serde"] }
again = "0.1.2"
futures-util = "0.3.31"
futures = "0.3.31"
sha3 = "0.10.8"
tikv-jemallocator = { version = "0.6.0", optional = true }
rkyv = { version = "0.8.10", features = ["std", "unaligned"] }

[features]
risc0 = ["guest_program/risc0", "ethrex-prover/risc0"]
sp1 = ["guest_program/sp1", "ethrex-prover/sp1"]
openvm = ["guest_program/openvm", "ethrex-prover/openvm"]
zisk = ["guest_program/zisk", "ethrex-prover/zisk"]
gpu = ["ethrex-prover/gpu"]
l2 = [
    "guest_program/l2",
    "ethrex-prover/l2",
    "ethrex-l2/l2",
    "ethrex-storage-rollup/l2",
]
ci = ["guest_program/ci", "ethrex-prover/ci"]
profiling = ["ethrex-prover/profiling"]
jemalloc = ["dep:tikv-jemallocator"]
